activity slider text overflow fixed

--- a/app/assets/stylesheets/activities.css
+++ b/app/assets/stylesheets/activities.css
@@ -108,6 +108,7 @@
 {
   width: 100%;
   text-align: right;
+  margin-top: 4px;
 }
 
 
